--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ a {
       .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close span {
         font-size: 30px;
         display: inline-block;
+        color: white;
         padding-left: 10px;
         padding-right: 0px;
         line-height: 1;
@@ -231,6 +232,7 @@ a {
       display: inline-block; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
+      color: white;
       right: 0px;
       top: 10px;
       z-index: 20;
